syntax = "proto3";

package audit;

option go_package = "github.com/aashiq-04/session-management-system/backend/services/audit-service/proto";

// Audit Service handles security event logging and compliance monitoring
service AuditService {
  // Create a new audit log entry
  rpc CreateAuditLog(CreateAuditLogRequest) returns (CreateAuditLogResponse);
  
  // Get audit logs for a user
  rpc GetUserAuditLogs(GetUserAuditLogsRequest) returns (GetUserAuditLogsResponse);
  
  // Get audit logs by event type
  rpc GetAuditLogsByEvent(GetAuditLogsByEventRequest) returns (GetAuditLogsByEventResponse);
  
  // Get security alerts for a user
  rpc GetSecurityAlerts(GetSecurityAlertsRequest) returns (GetSecurityAlertsResponse);
  
  // Create a security alert
  rpc CreateSecurityAlert(CreateSecurityAlertRequest) returns (CreateSecurityAlertResponse);
  
  // Resolve a security alert
  rpc ResolveSecurityAlert(ResolveSecurityAlertRequest) returns (ResolveSecurityAlertResponse);
  
  // Get compliance report
  rpc GetComplianceReport(GetComplianceReportRequest) returns (GetComplianceReportResponse);
  
  // Get activity summary
  rpc GetActivitySummary(GetActivitySummaryRequest) returns (GetActivitySummaryResponse);
}

// Audit Log Entry
message AuditLog {
  string id = 1;
  string user_id = 2;
  string session_id = 3;
  string device_id = 4;
  string event_type = 5;
  string event_category = 6;
  string severity = 7;
  string ip_address = 8;
  string user_agent = 9;
  string location_country = 10;
  string location_city = 11;
  string metadata = 12; // JSON string
  bool success = 13;
  string failure_reason = 14;
  string created_at = 15;
}

// Security Alert
message SecurityAlert {
  string id = 1;
  string user_id = 2;
  string alert_type = 3;
  string severity = 4;
  string description = 5;
  string metadata = 6;
  string ip_address = 7;
  string location_country = 8;
  string location_city = 9;
  bool is_resolved = 10;
  string resolved_at = 11;
  string created_at = 12;
}

// Create Audit Log Request
message CreateAuditLogRequest {
  string user_id = 1;
  string session_id = 2;
  string device_id = 3;
  string event_type = 4;
  string event_category = 5;
  string severity = 6;
  string ip_address = 7;
  string user_agent = 8;
  string location_country = 9;
  string location_city = 10;
  string metadata = 11;
  bool success = 12;
  string failure_reason = 13;
}

// Create Audit Log Response
message CreateAuditLogResponse {
  bool success = 1;
  string message = 2;
  string log_id = 3;
}

// Get User Audit Logs Request
message GetUserAuditLogsRequest {
  string user_id = 1;
  int32 limit = 2;
  int32 offset = 3;
  string event_category = 4; // Optional filter
  string severity = 5; // Optional filter
  bool success_only = 6; // Filter for successful events only
}

// Get User Audit Logs Response
message GetUserAuditLogsResponse {
  bool success = 1;
  string message = 2;
  repeated AuditLog logs = 3;
  int32 total_count = 4;
}

// Get Audit Logs By Event Request
message GetAuditLogsByEventRequest {
  string event_type = 1;
  int32 limit = 2;
  int32 offset = 3;
  string start_date = 4; // ISO 8601 format
  string end_date = 5;   // ISO 8601 format
}

// Get Audit Logs By Event Response
message GetAuditLogsByEventResponse {
  bool success = 1;
  string message = 2;
  repeated AuditLog logs = 3;
  int32 total_count = 4;
}

// Get Security Alerts Request
message GetSecurityAlertsRequest {
  string user_id = 1;
  bool include_resolved = 2;
  string severity = 3; // Optional filter
}

// Get Security Alerts Response
message GetSecurityAlertsResponse {
  bool success = 1;
  string message = 2;
  repeated SecurityAlert alerts = 3;
  int32 total_count = 4;
  int32 unresolved_count = 5;
}

// Create Security Alert Request
message CreateSecurityAlertRequest {
  string user_id = 1;
  string alert_type = 2;
  string severity = 3;
  string description = 4;
  string metadata = 5;
  string ip_address = 6;
  string location_country = 7;
  string location_city = 8;
}

// Create Security Alert Response
message CreateSecurityAlertResponse {
  bool success = 1;
  string message = 2;
  string alert_id = 3;
}

// Resolve Security Alert Request
message ResolveSecurityAlertRequest {
  string alert_id = 1;
  string user_id = 2; // For authorization
}

// Resolve Security Alert Response
message ResolveSecurityAlertResponse {
  bool success = 1;
  string message = 2;
}

// Get Compliance Report Request
message GetComplianceReportRequest {
  string user_id = 1;
  string start_date = 2; // ISO 8601 format
  string end_date = 3;   // ISO 8601 format
}

// Get Compliance Report Response
message GetComplianceReportResponse {
  bool success = 1;
  string message = 2;
  int32 total_events = 3;
  int32 successful_logins = 4;
  int32 failed_logins = 5;
  int32 session_revocations = 6;
  int32 security_alerts = 7;
  int32 mfa_events = 8;
  repeated EventCount event_breakdown = 9;
  repeated string top_locations = 10;
}

// Event Count for breakdown
message EventCount {
  string event_type = 1;
  int32 count = 2;
}

// Get Activity Summary Request
message GetActivitySummaryRequest {
  string user_id = 1;
  int32 days = 2; // Number of days to look back
}

// Get Activity Summary Response
message GetActivitySummaryResponse {
  bool success = 1;
  string message = 2;
  int32 total_logins = 3;
  int32 failed_login_attempts = 4;
  int32 unique_devices = 5;
  int32 unique_locations = 6;
  repeated DailyActivity daily_activity = 7;
}

// Daily Activity
message DailyActivity {
  string date = 1;
  int32 login_count = 2;
  int32 failed_login_count = 3;
}